<resources>
    <string name="app_name">My Application</string>
    <string name="ell_logo">ell_logo</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="username">"   Username"</string>
    <string name="password">"   Password"</string>
    <string name="enter">ENTER</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">"   Confirm Password"</string>
    <string name="qrcode">QrCode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="search_users">Search Users</string>
    <string name="scan_code">Scan Code</string>
</resources>