<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logoSize"
        android:layout_height="@dimen/logoSize"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ell_logo"
        android:src="@drawable/ell_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/container"
        android:elevation="1dp"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"
            android:textColor="@color/ellBlue"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up"
            android:textColor="@color/unselectedText"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signIn_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="150dp"
                android:autofillHints="Email"
                android:background="@drawable/edit_text_signin"
                android:inputType="text"
                android:text="@string/username"
                android:textColor="@color/lightGreyText"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:autofillHints="Email"
                android:background="@drawable/edit_text_signin"
                android:inputType="text"
                android:text="@string/password"
                android:textColor="@color/lightGreyText"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/editTextEmail"
                tools:ignore="LabelFor,TextFields" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_blue_round"
                android:text="@string/enter"
                android:textColor="@color/activityBackground"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signUp_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <EditText
                android:id="@+id/editTextEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="150dp"
                android:autofillHints="Email"
                android:background="@drawable/edit_text_signin"
                android:inputType="text"
                android:text="@string/username"
                android:textColor="@color/lightGreyText"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editTextPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:autofillHints="Email"
                android:background="@drawable/edit_text_signin"
                android:inputType="text"
                android:text="@string/password"
                android:textColor="@color/lightGreyText"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/editTextEmailSignUp"
                tools:ignore="LabelFor,TextFields" />

            <EditText
                android:id="@+id/editTextPasswordSignUp2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:autofillHints="Email"
                android:background="@drawable/edit_text_signin"
                android:inputType="text"
                android:text="@string/confirm_password"
                android:textColor="@color/lightGreyText"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/editTextPasswordSignUp"
                tools:ignore="LabelFor,TextFields" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_blue_round"
                android:text="@string/create"
                android:textColor="@color/activityBackground"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>